infra/k8s/back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back
          image: back
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: back-srv
spec:
  selector:
    app: back
  ports:
    - name: back
      protocol: TCP
      port: 3000
      targetPort: 3000
