infra/k8s/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: front

---
apiVersion: v1
kind: Service
metadata:
  name: front-srv
spec:
  selector:
    app: front
  ports:
    - name: front
      protocol: TCP
      port: 80
      targetPort: 80
