infra/k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-mongo
  template:
    metadata:
      labels:
        app: back-mongo
    spec:
      containers:
        - name: back-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: back-mongo-srv
spec:
  selector:
    app: back-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
