infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: examen.dh
      http:
        paths:
          - path: /api/.*
            pathType: Prefix
            backend:
              service:
                name: back-srv
                port:
                  number: 3000
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: front-srv
                port:
                  number: 80
